--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "slasher": "build/slasher.js"
     },
     "dependencies": {
+        "@discordjs/rest": "^0.1.0-canary.0",
         "ansi-colors": "^4.1.1",
+        "discord-api-types": "^0.22.0",
         "discord.js": "^13.1.0"
     },
     "devDependencies": {
