--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "discord.js-slasher",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "description": "A framework to simplify the creation of Discord bots.",
     "keywords": [
         "discord",
@@ -11,6 +11,10 @@
     "author": {
         "name": "Jack Davenport",
         "email": "jack.davenport5011@gmail.com"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Romejanic/slasher.git"
     },
     "license": "MIT",
     "main": "index.js",
