--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "type": "git",
         "url": "https://github.com/Romejanic/slasher.git"
     },
+    "bugs": {
+        "url": "https://github.com/Romejanic/slasher/issues/new/choose"
+    },
     "license": "MIT",
     "main": "build/index.js",
     "types": "build/index.d.ts",
