--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "target": "ES2015",
         "outDir": "build",
         "rootDir": ".",
-        "declaration": true
+        "declaration": true,
+        "skipLibCheck": true
     },
     "exclude": [
         "build",
