--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "types": "build/index.d.ts",
     "scripts": {
         "build": "tsc && npm link",
-        "dev": "tsc -w"
+        "dev": "tsc -w",
+        "clean": "rm -rf build"
     },
     "bin": {
         "slasher": "build/src/slasher.js"
