--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
         "slasher": "build/src/slasher.js"
     },
     "dependencies": {
-        "@discordjs/rest": "^0.1.0-canary.0",
+        "@discordjs/rest": "^1.0.0",
         "ansi-colors": "^4.1.1",
-        "discord-api-types": "^0.34.0",
-        "discord.js": "^13.8.0"
+        "discord-api-types": "^0.36.3",
+        "discord.js": "^14.0.3"
     },
     "devDependencies": {
         "typescript": "^4.4.2"
