--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
         "slasher": "build/src/slasher.js"
     },
     "dependencies": {
-        "@discordjs/rest": "^1.6.0",
-        "ansi-colors": "^4.1.3",
-        "discord-api-types": "^0.36.3"
+        "ansi-colors": "^4.1.3"
     },
     "peerDependencies": {
         "discord.js": "^14.8.0"
